chore: initial commit :rocket:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:oOfHSfvOmztV+zO7uQ==,iv:VadOjXmW988QLtY3WgwUbAy5EGAB1jS3s52XPjZDyqQ=,tag:TNO4MFzaeFUlU78xf08Z4A==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:N+VRC7dn1E1nT6CsaA==,iv:liMf+RedjP964d9kXCvAt1aWIlp1ZffLalC2fb4nT3I=,tag:6/3bRLBpnP0A8g3tryzBuA==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1RjhNb2NxR1UyYzl4c0xm
-        ajdjMjlMa0YyeTU4aFd4TzdEaU1BMlJ0eGhVCmxCWkpaajh4UGhTZ1Yvd1NqbGRO
-        TkoyUlM5SjZxdEhZdmpIdElxYUx5MFEKLS0tIElKSkovRzBqYWNxcEd2N2RNOU1Q
-        Ym5rNmlRMGJyNE5sUmtNVm5BYjk0ZU0K7dZcGA7pGUjKAS5eQ5uyq9t8JGr2rXVq
-        TBKAMtysUBEm33mHE1t3BvMhietdgE/666oBbAyOJPx6x5rEU9LVvg==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIM2VjanFOL05jaGFkbnVW
+        MGxPNEdDdnB1VGJCOHVQWDAxd25qWmJzMFNJCmdORVJvTzgydFRQMW9pWWU3c2oz
+        M2h0QTVzWEhlQk1FWmI0dEI5TXY5ZGMKLS0tIHE3M0VHS3FIQnI0ZE5DcmRlT3pn
+        eHBKaHI2NDFsNnN2dWl4SmxKZVRzcWsKDE2622H/EopWgtyPrkN/cdSmA6kU7SAQ
+        dy6ASYKsKaKsnr3GQeu8KjWuyP6HK4cz+2rMkwAmxjebstp6TXuqbQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T08:31:30Z"
-  mac: ENC[AES256_GCM,data:auGxJxukYhw3gvcuy7T7dvzEPFSDr5OoyNU2OFb4V/2y9o4ai99CXeObnMw6NYzWftOb8g/gtgSDm3aDwTuDbEt1szN2L4cIvrvpPM0Oiws08utJugTFI5LuIKlr+gWfogCvj0gE9bpXV7GHqpXFjxU168oFDsIcsMm9h4zG8W8=,iv:JyPTshmO6k0INrzbn9bci4aN3ySerJ1TK18nmtRWES0=,tag:1C7bIVAE1aPoJ6Hl7epPUg==,type:str]
+  lastmodified: "2025-04-02T08:39:41Z"
+  mac: ENC[AES256_GCM,data:ZlpE4DKU2YVXqWfgkyJRE3eZyl1y9aaSNydXbX3a7oXuJwMpn2z67pLXzjKyyXuOO1UemK82aum8IbcSmVDt7ALO2YPmm11ea3cnaXHeyvG7pscIFqc2QtHbD+j2lbCrg6m2GMSozTPmeU9Mfok5ecE8Pm2c3VzbEm2C/RXhI1Y=,iv:gKXRO28VAHTdApuVUT/QFMk0NLXxIKaVezIceEiGvnc=,tag:LTp2vzSmiPVtBWNnnaDeXg==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
