chore: initial commit :rocket:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:N+VRC7dn1E1nT6CsaA==,iv:liMf+RedjP964d9kXCvAt1aWIlp1ZffLalC2fb4nT3I=,tag:6/3bRLBpnP0A8g3tryzBuA==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:si7uDu4KbL/9oB2JAA==,iv:HN4qEvTweDs7PPsrsWqMMlteabWxnIuXe1MvW3tWNTM=,tag:iUs7fNnzmVd0yzP4OLd1cQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIM2VjanFOL05jaGFkbnVW
-        MGxPNEdDdnB1VGJCOHVQWDAxd25qWmJzMFNJCmdORVJvTzgydFRQMW9pWWU3c2oz
-        M2h0QTVzWEhlQk1FWmI0dEI5TXY5ZGMKLS0tIHE3M0VHS3FIQnI0ZE5DcmRlT3pn
-        eHBKaHI2NDFsNnN2dWl4SmxKZVRzcWsKDE2622H/EopWgtyPrkN/cdSmA6kU7SAQ
-        dy6ASYKsKaKsnr3GQeu8KjWuyP6HK4cz+2rMkwAmxjebstp6TXuqbQ==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwMTNYSEptdGdiVjI5R1Y5
+        WTN3OW5XZEdmVGlLTk1VMlJWd3JEUW5NMVZBCmZlQndESFE3S0xCNWFYMXUvaFdV
+        aW1tTFJqVmFHUHgyN211Y1hwaGE3TGcKLS0tIEc0MkJYaCtrMUZ0SXE0TmdPQ3hu
+        MEU5VU43Q1RhVkxHcXl0QWFhT3Nmc3MKk9iswuuah8En6KI1RoPUVz2RqKuCUBq1
+        oW4v9RoypFsK8LuCAl2Ryr+uBU03RMSUhxZynmN9jHD5VzQeoE9LLg==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T08:39:41Z"
-  mac: ENC[AES256_GCM,data:ZlpE4DKU2YVXqWfgkyJRE3eZyl1y9aaSNydXbX3a7oXuJwMpn2z67pLXzjKyyXuOO1UemK82aum8IbcSmVDt7ALO2YPmm11ea3cnaXHeyvG7pscIFqc2QtHbD+j2lbCrg6m2GMSozTPmeU9Mfok5ecE8Pm2c3VzbEm2C/RXhI1Y=,iv:gKXRO28VAHTdApuVUT/QFMk0NLXxIKaVezIceEiGvnc=,tag:LTp2vzSmiPVtBWNnnaDeXg==,type:str]
+  lastmodified: "2025-04-02T08:50:03Z"
+  mac: ENC[AES256_GCM,data:CHS9Yp8qrfCxKS6xPnYvs4iErBP8Yp6Dl6Cq7BO4D48ujM/jq+SvZPjQMNroaG3jbHiNqUeagNQyQEISPMXRhTDMRhAiK/1Yij69qoMpDGTsnMqcO+mdREQuDJkwVLr/r07fTlobuduFcl8SbvtGanl64di2VNMv4VeyJDe+ZKw=,iv:vtyl9zTkE/0zRlY9FlbM1DbZGrfEJcolbMxD/h6TIJE=,tag:YtQ85WOHqOLtsK/9tWQCYw==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
