--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:si7uDu4KbL/9oB2JAA==,iv:HN4qEvTweDs7PPsrsWqMMlteabWxnIuXe1MvW3tWNTM=,tag:iUs7fNnzmVd0yzP4OLd1cQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:X1cNaPJ0URThNAXIOA==,iv:hlzeTEwFEsnhu9qIrZvH4RPZIO8dXIrX7c8+bP8z5y0=,tag:til6qupLp8f4vqHyKX+2aQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwMTNYSEptdGdiVjI5R1Y5
-        WTN3OW5XZEdmVGlLTk1VMlJWd3JEUW5NMVZBCmZlQndESFE3S0xCNWFYMXUvaFdV
-        aW1tTFJqVmFHUHgyN211Y1hwaGE3TGcKLS0tIEc0MkJYaCtrMUZ0SXE0TmdPQ3hu
-        MEU5VU43Q1RhVkxHcXl0QWFhT3Nmc3MKk9iswuuah8En6KI1RoPUVz2RqKuCUBq1
-        oW4v9RoypFsK8LuCAl2Ryr+uBU03RMSUhxZynmN9jHD5VzQeoE9LLg==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvdGoydlh6ay9BQWZCb1VW
+        VUFHeEtmeHVQaVgwdmxTekFzWHBKVWRKZXpRCklmWkY1KzBSNDlYZ2lwOEVTMWVP
+        KzEwUUszOElTVzEydXJaa3FCQ1ZXa1UKLS0tIDhnbHJlMzJQSFMyd2F3L0VlbTBl
+        ODYva1UrQlYrRmwrWGN3MnpSR1k0eWcKJCKOc0jIRagneeQmbjeNv3/YBQHGFkmK
+        6nGjdilugYM9TbEtKlKmMSREvR7AMs+angMuyBvz7WFd7Ue9E07fTQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T08:50:03Z"
-  mac: ENC[AES256_GCM,data:CHS9Yp8qrfCxKS6xPnYvs4iErBP8Yp6Dl6Cq7BO4D48ujM/jq+SvZPjQMNroaG3jbHiNqUeagNQyQEISPMXRhTDMRhAiK/1Yij69qoMpDGTsnMqcO+mdREQuDJkwVLr/r07fTlobuduFcl8SbvtGanl64di2VNMv4VeyJDe+ZKw=,iv:vtyl9zTkE/0zRlY9FlbM1DbZGrfEJcolbMxD/h6TIJE=,tag:YtQ85WOHqOLtsK/9tWQCYw==,type:str]
+  lastmodified: "2025-04-02T11:55:28Z"
+  mac: ENC[AES256_GCM,data:TKzxcNA6Uh4BKSb6IT/Tg3w2ICl4OkByXkLNloZwX5asaQNRG/KEIFV7TRuIF+ip0NYYDfby3GLIqyPiipp6yUu0reJ5TgTZMBKcLMPw7e0UUxLgNFklrCpmHDNghvEEDUv0PyZTcUHDVxaBsmvNQz4X3iDiqtILxg5brCG4KwA=,iv:wFWRYwNc4tA/0uj6OeKYNVQrf1J6Cfh0CTbRo3FEJJk=,tag:A23PxPUX/aurSBoW50P0yA==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
