chore: initial commit :rocket:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:X1cNaPJ0URThNAXIOA==,iv:hlzeTEwFEsnhu9qIrZvH4RPZIO8dXIrX7c8+bP8z5y0=,tag:til6qupLp8f4vqHyKX+2aQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:A0URDQ/DWZatiTj+SQ==,iv:ULeuPwgBiwsWPnnlih4eBUtiFV6+BC1fQvikhFqAgcQ=,tag:hp8iyR0LvLk1lA+P/TMJRQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvdGoydlh6ay9BQWZCb1VW
-        VUFHeEtmeHVQaVgwdmxTekFzWHBKVWRKZXpRCklmWkY1KzBSNDlYZ2lwOEVTMWVP
-        KzEwUUszOElTVzEydXJaa3FCQ1ZXa1UKLS0tIDhnbHJlMzJQSFMyd2F3L0VlbTBl
-        ODYva1UrQlYrRmwrWGN3MnpSR1k0eWcKJCKOc0jIRagneeQmbjeNv3/YBQHGFkmK
-        6nGjdilugYM9TbEtKlKmMSREvR7AMs+angMuyBvz7WFd7Ue9E07fTQ==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4WFRQN3BBNzgxbWRFbE1T
+        ajNwdVNkYjNzaXI0UkVpUXhFQmh4Y2x5ZDBvCmJ0ZS94b1pYalNxK2hIcVBCKzgv
+        K0ZsK1djOEdQeWQyWDlGbkpkZUxPRkkKLS0tIERUWndkanJVQ3pBNHJwQkZ6YzNk
+        Qm40TGRSUnphTHhVM2RsNmJSVWhmYlUKDwxL0p4Zz5BSqAodVckiKrqFHiki0gz7
+        vPW1CACpnRSpE4lq0Ji+cbie1UQXeRP+p4yr3bxQQhOUXH9DgTKj1g==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T11:55:28Z"
-  mac: ENC[AES256_GCM,data:TKzxcNA6Uh4BKSb6IT/Tg3w2ICl4OkByXkLNloZwX5asaQNRG/KEIFV7TRuIF+ip0NYYDfby3GLIqyPiipp6yUu0reJ5TgTZMBKcLMPw7e0UUxLgNFklrCpmHDNghvEEDUv0PyZTcUHDVxaBsmvNQz4X3iDiqtILxg5brCG4KwA=,iv:wFWRYwNc4tA/0uj6OeKYNVQrf1J6Cfh0CTbRo3FEJJk=,tag:A23PxPUX/aurSBoW50P0yA==,type:str]
+  lastmodified: "2025-04-02T13:20:01Z"
+  mac: ENC[AES256_GCM,data:sQGREmOY81iZGkXxTNe6zpaSzQ5lSWV01g0SaKqK5typhuxbRjFyBONNC1c336IWRO1MXCSiZ9R7lRomfpEZ0mYFdwURqTlWWdZ3ywhboDfnj7EAiI+Xoca4sog1GHsJLfaN++PgVElClDA8hfL/KsJbZTt51QsLeSsEkuP9+pw=,iv:WyD6sGrGCRQCKZnpmY06vwxLLhaMHppfYCFNKR4nfSU=,tag:CAxl7A6au2gMqIH7Is4yKA==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
