chore: initial commit :rocket:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:A0URDQ/DWZatiTj+SQ==,iv:ULeuPwgBiwsWPnnlih4eBUtiFV6+BC1fQvikhFqAgcQ=,tag:hp8iyR0LvLk1lA+P/TMJRQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:sFt9hIdpEC+z7juEcw==,iv:3L4XF2KJniVCqR+KH1ag8Mq4hZLyAiTFaOKidcvDY+c=,tag:ohpJe9UEd9Yihj7eokcr2Q==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4WFRQN3BBNzgxbWRFbE1T
-        ajNwdVNkYjNzaXI0UkVpUXhFQmh4Y2x5ZDBvCmJ0ZS94b1pYalNxK2hIcVBCKzgv
-        K0ZsK1djOEdQeWQyWDlGbkpkZUxPRkkKLS0tIERUWndkanJVQ3pBNHJwQkZ6YzNk
-        Qm40TGRSUnphTHhVM2RsNmJSVWhmYlUKDwxL0p4Zz5BSqAodVckiKrqFHiki0gz7
-        vPW1CACpnRSpE4lq0Ji+cbie1UQXeRP+p4yr3bxQQhOUXH9DgTKj1g==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4N0hMZkxxNUhFU1ZOOHZQ
+        Y3IxU0E5dFRudjhBNFQ2ZnlsUW5jTmV6eVZRCjZZQkdqVy9scWVRcnZjLzJNTlox
+        T3VjQTk3N0JzdGJuOGZjT09QWk51VVUKLS0tIEhZMlpZaHBGY1NqcWJoeFdadHhR
+        OGJ2ZEJuY0ZoREp3VjA5NXhscStOakEKNzuHCmWRtgczbr8fSERiEB6FjaAAUU1F
+        0GwcIkZxsQO9dx0uYNkLkn5y6E2Bcu0BnhlYFXRwAmNietjoLOgm1Q==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T13:20:01Z"
-  mac: ENC[AES256_GCM,data:sQGREmOY81iZGkXxTNe6zpaSzQ5lSWV01g0SaKqK5typhuxbRjFyBONNC1c336IWRO1MXCSiZ9R7lRomfpEZ0mYFdwURqTlWWdZ3ywhboDfnj7EAiI+Xoca4sog1GHsJLfaN++PgVElClDA8hfL/KsJbZTt51QsLeSsEkuP9+pw=,iv:WyD6sGrGCRQCKZnpmY06vwxLLhaMHppfYCFNKR4nfSU=,tag:CAxl7A6au2gMqIH7Is4yKA==,type:str]
+  lastmodified: "2025-04-02T13:21:06Z"
+  mac: ENC[AES256_GCM,data:Hn2EwSSO1Stg0IV+Fxin5IYNmQ+qTm6Bc616/1oP1q2D6vZqjSfu88FYXA2rCY/Y7pBiHQV8yaUCUNNpZE1ELAjDbn2ZJlxn5PwV1gu66DC/4zKvnfC8FgN7v47Opwl1PD5Efz2e0qxVCz5Y+ns/QQqJyLdqkydkvGP8OjTvOyE=,iv:MvhYuwXQKd2zgGEXzjmA09icXYVf7ZwT2QZ6BVtPEOM=,tag:cPhOFREQllqc7vJMY/loXQ==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
