chore: initial commit :rocket:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:sFt9hIdpEC+z7juEcw==,iv:3L4XF2KJniVCqR+KH1ag8Mq4hZLyAiTFaOKidcvDY+c=,tag:ohpJe9UEd9Yihj7eokcr2Q==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:1YCKBwAQTDH5yhjUeA==,iv:Z/k/GQFJsOEZbPlhyjQPQImLpZbr1dusmTj3GIDVZmc=,tag:tK3AgxsPH8k717whqmXyeg==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4N0hMZkxxNUhFU1ZOOHZQ
-        Y3IxU0E5dFRudjhBNFQ2ZnlsUW5jTmV6eVZRCjZZQkdqVy9scWVRcnZjLzJNTlox
-        T3VjQTk3N0JzdGJuOGZjT09QWk51VVUKLS0tIEhZMlpZaHBGY1NqcWJoeFdadHhR
-        OGJ2ZEJuY0ZoREp3VjA5NXhscStOakEKNzuHCmWRtgczbr8fSERiEB6FjaAAUU1F
-        0GwcIkZxsQO9dx0uYNkLkn5y6E2Bcu0BnhlYFXRwAmNietjoLOgm1Q==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5OEIvUjNTZHgwTXp2N1hk
+        KysxTXByYmRiS09qaVkyQlZXV2hJQnFlRlRzCjA1WGJGQ0NZb1hBSlNBNDRweEtK
+        bXM4YVlBL2pYWDE5RnZqcjJiYk1KN1EKLS0tIGVsOElRRU4wNFBHK0UwRlovNXd1
+        clkzamhRS24zdXlOcWN5dWNQN3NoL28KgAxqwcC8z5ZcT9RL9rD7h/GAL5eQrKBV
+        Fm2/sSOUVAMEpym8VeLUeYdJmh/3xIkJeTaODa8HMjbB4desuJrJ3w==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T13:21:06Z"
-  mac: ENC[AES256_GCM,data:Hn2EwSSO1Stg0IV+Fxin5IYNmQ+qTm6Bc616/1oP1q2D6vZqjSfu88FYXA2rCY/Y7pBiHQV8yaUCUNNpZE1ELAjDbn2ZJlxn5PwV1gu66DC/4zKvnfC8FgN7v47Opwl1PD5Efz2e0qxVCz5Y+ns/QQqJyLdqkydkvGP8OjTvOyE=,iv:MvhYuwXQKd2zgGEXzjmA09icXYVf7ZwT2QZ6BVtPEOM=,tag:cPhOFREQllqc7vJMY/loXQ==,type:str]
+  lastmodified: "2025-04-02T13:24:19Z"
+  mac: ENC[AES256_GCM,data:CUvYUo3SaGxaSjY5TW4HBiR5fgLWqORF4Dq/dKC9O6B3PFuOil0NOjtVT2vTdiC66f+4BaqpyIuWUKjaFpf9aF3U/+OuPbbyjrOY8Gg2xFvOqpdWKxrN4hD3InqHAlzPmZvrUp91op/5JIws23Bcy9UZR9g0UbmFP46sMIBE4DQ=,iv:uXnUJrw4rz3TvKPyCub/pw3ZzSx56XjWUPns3P+qfxY=,tag:/KL4TBjuTeZ0gSP+BHyHpw==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
