chore: initial commit :rocket:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:1YCKBwAQTDH5yhjUeA==,iv:Z/k/GQFJsOEZbPlhyjQPQImLpZbr1dusmTj3GIDVZmc=,tag:tK3AgxsPH8k717whqmXyeg==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:+cXUEO8y8PgXNz5lLg==,iv:nOrOr3Mrfp8WF2JgLk9v6EmdRdjkHbNAHXMr5Gt0h5E=,tag:tBy88cfXq2hlL5ri0wMmeQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5OEIvUjNTZHgwTXp2N1hk
-        KysxTXByYmRiS09qaVkyQlZXV2hJQnFlRlRzCjA1WGJGQ0NZb1hBSlNBNDRweEtK
-        bXM4YVlBL2pYWDE5RnZqcjJiYk1KN1EKLS0tIGVsOElRRU4wNFBHK0UwRlovNXd1
-        clkzamhRS24zdXlOcWN5dWNQN3NoL28KgAxqwcC8z5ZcT9RL9rD7h/GAL5eQrKBV
-        Fm2/sSOUVAMEpym8VeLUeYdJmh/3xIkJeTaODa8HMjbB4desuJrJ3w==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnV21nWHRrdnUyUDF4Tk4x
+        UjRjZnI4UnVmVmNWbW5wRmQ3Z3V5bFRPcHhzCnNVa3J2NnkrTmlMb0p1L2Y4c3p5
+        U2NydnVBbUNuZEI3UzVjVjdQS0dFNEkKLS0tIHdPL3c4T1NtK1BObU1wdm16bmFF
+        Q09saHBGZktwM1VZVUZTU0tIMmtCbmMKIXC6Gz5j1gs6Lq2F1Qbn6fV3HnKowZ//
+        QkqL39Cm/ww8b7P+2zDLknZO8pmPQSUmCZDQCyq04+DmP3xyMV1a9w==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T13:24:19Z"
-  mac: ENC[AES256_GCM,data:CUvYUo3SaGxaSjY5TW4HBiR5fgLWqORF4Dq/dKC9O6B3PFuOil0NOjtVT2vTdiC66f+4BaqpyIuWUKjaFpf9aF3U/+OuPbbyjrOY8Gg2xFvOqpdWKxrN4hD3InqHAlzPmZvrUp91op/5JIws23Bcy9UZR9g0UbmFP46sMIBE4DQ=,iv:uXnUJrw4rz3TvKPyCub/pw3ZzSx56XjWUPns3P+qfxY=,tag:/KL4TBjuTeZ0gSP+BHyHpw==,type:str]
+  lastmodified: "2025-04-02T13:37:41Z"
+  mac: ENC[AES256_GCM,data:idzHJj701kiq339Ob2S1XfrveBRB3RXmHsDgC2JXbsHn+UPicMed4ad41Fu6WLCaUkJZ+Cqq1W3GDf1me+mgL6IQdxLYTBWjjLyRPHGuvgi8y4lg+omJxpWXSqEdj7BblNb6KATGQMlu2ebpNT7Ai5MiPCIN+P9yG3oe41oNjR0=,iv:lbV1iEU43lphMrZWFG5u7ARK3tLJHqx/Vv756E6P41g=,tag:VxltcsfZBukzmUNCVvELYw==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
