chore: initial commit :rocket:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:+cXUEO8y8PgXNz5lLg==,iv:nOrOr3Mrfp8WF2JgLk9v6EmdRdjkHbNAHXMr5Gt0h5E=,tag:tBy88cfXq2hlL5ri0wMmeQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:kVcE3LC+krD8fyQSIA==,iv:t2JwS4BT2C4LLnEzzUoarNy3vTWCH9B5DAseNToiK4Y=,tag:baj9PEP6q4UiJv5yISUiFA==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnV21nWHRrdnUyUDF4Tk4x
-        UjRjZnI4UnVmVmNWbW5wRmQ3Z3V5bFRPcHhzCnNVa3J2NnkrTmlMb0p1L2Y4c3p5
-        U2NydnVBbUNuZEI3UzVjVjdQS0dFNEkKLS0tIHdPL3c4T1NtK1BObU1wdm16bmFF
-        Q09saHBGZktwM1VZVUZTU0tIMmtCbmMKIXC6Gz5j1gs6Lq2F1Qbn6fV3HnKowZ//
-        QkqL39Cm/ww8b7P+2zDLknZO8pmPQSUmCZDQCyq04+DmP3xyMV1a9w==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHV1lheVhmYkNkNWVrd2o5
+        OEdEZ2dybm1VSnllbnhTSjFOOTRGNmUxSXlZCkc5aDJSOFJxU0tHY3BKd2FJT1Vj
+        L1hvZ01RaXVobUcyVFFpQ0N3ZFBudlUKLS0tIEhYYjc3WExEbjh4SFZqM2FaWUF6
+        bldkMmxDYkd4Nmx4K3VkWXk4ZHIvOEEK3M1PU+VHYqYDd0si1W01nyt/XZ2JTmi2
+        rOo8Ul+UhdfA2LSDRpnF6loYs+42uT/a+Hwizh45IpnA3h89PWBV5A==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T13:37:41Z"
-  mac: ENC[AES256_GCM,data:idzHJj701kiq339Ob2S1XfrveBRB3RXmHsDgC2JXbsHn+UPicMed4ad41Fu6WLCaUkJZ+Cqq1W3GDf1me+mgL6IQdxLYTBWjjLyRPHGuvgi8y4lg+omJxpWXSqEdj7BblNb6KATGQMlu2ebpNT7Ai5MiPCIN+P9yG3oe41oNjR0=,iv:lbV1iEU43lphMrZWFG5u7ARK3tLJHqx/Vv756E6P41g=,tag:VxltcsfZBukzmUNCVvELYw==,type:str]
+  lastmodified: "2025-04-02T14:46:22Z"
+  mac: ENC[AES256_GCM,data:1XTVgmCAFvnqs55IQtEP6k5+rES6i3QgNY7BwYNiW7xOIGIfRVXHAn1esBOGK/d/Itbm/0uQ8HLixJIY8YRDfg9RvdtbJEeHFrx5iKq44xd/9JVZWcBxENXjRwGjgFdNbtHkELE8oJAcXFg4Uo1eRBNQj0TMXFDBb1rsMJmM2DE=,iv:5gEGxCRcsoeTR3gPlkHtxOqCbJ31MmoBq2ZbHWvjpSA=,tag:ev/z/RDlqY2aaJm+GQATyw==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
