--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:kVcE3LC+krD8fyQSIA==,iv:t2JwS4BT2C4LLnEzzUoarNy3vTWCH9B5DAseNToiK4Y=,tag:baj9PEP6q4UiJv5yISUiFA==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:XDwcViDtJYzZutiQJw==,iv:WmilJEHpHrQNqtv6W5Xem+BiWbwrsiLH2mVE4EggXfM=,tag:Dd6Qsr3akTMa3R9pqFmckg==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHV1lheVhmYkNkNWVrd2o5
-        OEdEZ2dybm1VSnllbnhTSjFOOTRGNmUxSXlZCkc5aDJSOFJxU0tHY3BKd2FJT1Vj
-        L1hvZ01RaXVobUcyVFFpQ0N3ZFBudlUKLS0tIEhYYjc3WExEbjh4SFZqM2FaWUF6
-        bldkMmxDYkd4Nmx4K3VkWXk4ZHIvOEEK3M1PU+VHYqYDd0si1W01nyt/XZ2JTmi2
-        rOo8Ul+UhdfA2LSDRpnF6loYs+42uT/a+Hwizh45IpnA3h89PWBV5A==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrMXRMNTJUcnIwb2RQY1JR
+        VXJ6SitFR09LYW5BYVZLNW0vZzdvUkFPdkNFCmN6ZlA3ZGQ5cE52TklGaVNKZjdU
+        Ym9lTGk2blZ3bmlFeS9sZ3VOY3JhekUKLS0tIFpZNWhjLzhFZk85L1ZDeFhKcEYr
+        clpsdVdFMERhRzhZQ0Jta1Fuc1RQWjgKafMJ3H+QDgjFw7if/jNJ47+ICVwvFAI9
+        ziJihDF3y71f4ItZzciYyiDUFN72uJa7HZSFS7cuEOQUwjOtLpry9w==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T14:46:22Z"
-  mac: ENC[AES256_GCM,data:1XTVgmCAFvnqs55IQtEP6k5+rES6i3QgNY7BwYNiW7xOIGIfRVXHAn1esBOGK/d/Itbm/0uQ8HLixJIY8YRDfg9RvdtbJEeHFrx5iKq44xd/9JVZWcBxENXjRwGjgFdNbtHkELE8oJAcXFg4Uo1eRBNQj0TMXFDBb1rsMJmM2DE=,iv:5gEGxCRcsoeTR3gPlkHtxOqCbJ31MmoBq2ZbHWvjpSA=,tag:ev/z/RDlqY2aaJm+GQATyw==,type:str]
+  lastmodified: "2025-04-02T16:47:08Z"
+  mac: ENC[AES256_GCM,data:Abg9k4LyBrt5D3sXtP6pq18ghf1jPVaeZEfuVuHBZzgfJUguHMxqkzWnrAC4J52pBbWVGEkS4H+yuCQ7W7C3rhYNH/QXuvYCWfnR+nY++dU/AW3+JNQRhj9XqW7JApFrALCINYDU98W/1yxpcFW4OiOSOZnuGHOOKi4mGS1Bdrk=,iv:hB2kXtAB827M6Ibkdbr8j7FSdm0xQrvmBdXbcG1u5pU=,tag:nY6sOLixl4JjLADSQZALuA==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
