chore: initial commit :rocket:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:XDwcViDtJYzZutiQJw==,iv:WmilJEHpHrQNqtv6W5Xem+BiWbwrsiLH2mVE4EggXfM=,tag:Dd6Qsr3akTMa3R9pqFmckg==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:pc3l9dvTjYGvrcPaGw==,iv:+MQRtonqmfAo9rn8rtgbKXU07JRXBr8OglL6vWNAvAY=,tag:zP9gEhig5W6jsdLNWu+7Vw==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrMXRMNTJUcnIwb2RQY1JR
-        VXJ6SitFR09LYW5BYVZLNW0vZzdvUkFPdkNFCmN6ZlA3ZGQ5cE52TklGaVNKZjdU
-        Ym9lTGk2blZ3bmlFeS9sZ3VOY3JhekUKLS0tIFpZNWhjLzhFZk85L1ZDeFhKcEYr
-        clpsdVdFMERhRzhZQ0Jta1Fuc1RQWjgKafMJ3H+QDgjFw7if/jNJ47+ICVwvFAI9
-        ziJihDF3y71f4ItZzciYyiDUFN72uJa7HZSFS7cuEOQUwjOtLpry9w==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBURUIvQUhDcG9tWnVxN2JD
+        OWZTdHIvVVpuK2RMdDUzdHRiTXAyK2dOZmdvClUyWHJ4RGwzVTBDbmh6dWNiLytW
+        d21ONmdJSitCbTQ3ZElpOEt3empLSEkKLS0tIGk4Y2FUT29iYzU2MnhCazN4TlVP
+        bFdES0kreWZvVEwycXFvTWVMWFUwaEkKbeOXdxxUHAlB1Qm/IZN+AzR3b4yFyYHu
+        L5SxzPgSeRYOH0fmH63wiWqPbUmys3XIfHxUrIGlC6xis1oAlecZIg==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T16:47:08Z"
-  mac: ENC[AES256_GCM,data:Abg9k4LyBrt5D3sXtP6pq18ghf1jPVaeZEfuVuHBZzgfJUguHMxqkzWnrAC4J52pBbWVGEkS4H+yuCQ7W7C3rhYNH/QXuvYCWfnR+nY++dU/AW3+JNQRhj9XqW7JApFrALCINYDU98W/1yxpcFW4OiOSOZnuGHOOKi4mGS1Bdrk=,iv:hB2kXtAB827M6Ibkdbr8j7FSdm0xQrvmBdXbcG1u5pU=,tag:nY6sOLixl4JjLADSQZALuA==,type:str]
+  lastmodified: "2025-04-02T20:13:48Z"
+  mac: ENC[AES256_GCM,data:sfawjnvEliQpwTIDnC0ONvNevSCcJG65WFvxLSBTTIb/XSshdiY0psuDUA6FfHhioQWksKbb7nhOZrmva1/UNuCCKVtHAfX0HT10aAdoBmgIJAC6rrcQbtwNnwFAxAC0JBP4qMGwMeKkqc+l0IV5FDgatOs17GA8rzJjwtCOUts=,iv:fKVGklfbsKjiCP3taQ83RFLetJtUKnT7W8jDi1Yf6Fc=,tag:AijWLGthUdebZ8DELvAdHw==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
