chore: initial commit :rocket:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:pc3l9dvTjYGvrcPaGw==,iv:+MQRtonqmfAo9rn8rtgbKXU07JRXBr8OglL6vWNAvAY=,tag:zP9gEhig5W6jsdLNWu+7Vw==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:EkucEuzjLJ2V5J4lWA==,iv:uIqSTYJauQT82qrYTbGBgrS25YfSJxAbZUgHgTL2US4=,tag:W7YmZxoTlRcflVAnlcQQfQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBURUIvQUhDcG9tWnVxN2JD
-        OWZTdHIvVVpuK2RMdDUzdHRiTXAyK2dOZmdvClUyWHJ4RGwzVTBDbmh6dWNiLytW
-        d21ONmdJSitCbTQ3ZElpOEt3empLSEkKLS0tIGk4Y2FUT29iYzU2MnhCazN4TlVP
-        bFdES0kreWZvVEwycXFvTWVMWFUwaEkKbeOXdxxUHAlB1Qm/IZN+AzR3b4yFyYHu
-        L5SxzPgSeRYOH0fmH63wiWqPbUmys3XIfHxUrIGlC6xis1oAlecZIg==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsSXhLeDVZbGlzaWYzb3FT
+        bjRKZ3RZQ1R0K3A0Yzd5SHN3K2hHd3BrUVNRCkRTSzlCM0FEa044c1BERS9Bd1Qr
+        M1JqUUxSUEFxUTVkeUxiVldySEFXWWcKLS0tIHZYdWcwVXl2WVY1R3pCcFo5enZ3
+        c3BrQ0g0V1JidkFVdUE3dmdJVnBMMFEKQAeoQJbE1w/VPh6e/BXMWpG599PV8qXK
+        dZpcffSUZE77RkVkcQF6er6/m/k+2K4TmUfjKijHWANACRy3iPEaPQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T20:13:48Z"
-  mac: ENC[AES256_GCM,data:sfawjnvEliQpwTIDnC0ONvNevSCcJG65WFvxLSBTTIb/XSshdiY0psuDUA6FfHhioQWksKbb7nhOZrmva1/UNuCCKVtHAfX0HT10aAdoBmgIJAC6rrcQbtwNnwFAxAC0JBP4qMGwMeKkqc+l0IV5FDgatOs17GA8rzJjwtCOUts=,iv:fKVGklfbsKjiCP3taQ83RFLetJtUKnT7W8jDi1Yf6Fc=,tag:AijWLGthUdebZ8DELvAdHw==,type:str]
+  lastmodified: "2025-04-02T20:40:48Z"
+  mac: ENC[AES256_GCM,data:0MnWnx9w0TWQ6Ix6+hYZtBXWf90BXoIxzaTFMefWD8/aquNwZs1ap70k2S1/lrgPynPKgBVG8iCVfFcTVYsGMPiXVkKbLShrGPWVvpsl0Htu7NOrdTAWNxa8OP5PS0SiQpZ/tKoQpmcOYC2Y1YQT7gEiIK7M+grtMHEyajflxv8=,iv:9TQkNHWNO2r/HWOGwdjgmUFEIRDe6NdGkmVo04LBRag=,tag:uf/InKzySmONl2SGZOANoQ==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
