chore: initial commit :rocket:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:EkucEuzjLJ2V5J4lWA==,iv:uIqSTYJauQT82qrYTbGBgrS25YfSJxAbZUgHgTL2US4=,tag:W7YmZxoTlRcflVAnlcQQfQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:RP5oBtOheyr8D5/k6Q==,iv:2yIuvLGPOve/S9lbQyZsp8e5vfrgp86hAKlR9EitXZE=,tag:sUi/Aqwo9DUnziroob913w==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsSXhLeDVZbGlzaWYzb3FT
-        bjRKZ3RZQ1R0K3A0Yzd5SHN3K2hHd3BrUVNRCkRTSzlCM0FEa044c1BERS9Bd1Qr
-        M1JqUUxSUEFxUTVkeUxiVldySEFXWWcKLS0tIHZYdWcwVXl2WVY1R3pCcFo5enZ3
-        c3BrQ0g0V1JidkFVdUE3dmdJVnBMMFEKQAeoQJbE1w/VPh6e/BXMWpG599PV8qXK
-        dZpcffSUZE77RkVkcQF6er6/m/k+2K4TmUfjKijHWANACRy3iPEaPQ==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLdlBGN09uN29pZ3ZneVdw
+        dG1Pdzc5SjFqVFpJb3NuaWpjV3M3bHNTQTNjCm5jRjZWMTR5STFiUmIyQXVjZkZz
+        UkJLeWtWOHYveDhKZ21CTEFrR2J0a00KLS0tIFd3YXdjQUVFZnU4Q3JQd2VjT0lh
+        THg3aFFDTVVFaGNLcHlYNThxN1RxdmcKL6VIMeF8nYQ+0OfoSUsQMM7pweYroCpS
+        QPL0XqCwvOVDWR3hcon0rQBgpjDvXfUlCY7l5EdrQWXoiKP4XT736g==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T20:40:48Z"
-  mac: ENC[AES256_GCM,data:0MnWnx9w0TWQ6Ix6+hYZtBXWf90BXoIxzaTFMefWD8/aquNwZs1ap70k2S1/lrgPynPKgBVG8iCVfFcTVYsGMPiXVkKbLShrGPWVvpsl0Htu7NOrdTAWNxa8OP5PS0SiQpZ/tKoQpmcOYC2Y1YQT7gEiIK7M+grtMHEyajflxv8=,iv:9TQkNHWNO2r/HWOGwdjgmUFEIRDe6NdGkmVo04LBRag=,tag:uf/InKzySmONl2SGZOANoQ==,type:str]
+  lastmodified: "2025-04-02T21:59:52Z"
+  mac: ENC[AES256_GCM,data:9Ve+bo1UzzIfJCwVRwDXDKPiq+c7qmeAOXNc5p4p/QZx0MMVYOzb/fvz5DA1XZqAY/3xQtuD7xIl3gcGO6dKanIX2hhHcG5tiBFKKQbTobpcDjmnDeEXsWFjs3/oeI/ChPZr7reo0/1oqoY2OjrvhEH6f1BGjVqNOtKndrzbZmM=,iv:amnhbZMr4hZ90wZo8p9j/b9zp2BOb5PN11luoOA8Oc8=,tag:ZScbunA/SE6GcBO/Bt0FYA==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
