chore: initial commit :rocket:

--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:RP5oBtOheyr8D5/k6Q==,iv:2yIuvLGPOve/S9lbQyZsp8e5vfrgp86hAKlR9EitXZE=,tag:sUi/Aqwo9DUnziroob913w==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:1AkHPFmnKsRI5KfKJQ==,iv:PpTiUuNhNQxi5jbgkoNsZmitaAfDiuXaUU66Ln6g52I=,tag:2B0496651r8NQ717fY0wTw==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLdlBGN09uN29pZ3ZneVdw
-        dG1Pdzc5SjFqVFpJb3NuaWpjV3M3bHNTQTNjCm5jRjZWMTR5STFiUmIyQXVjZkZz
-        UkJLeWtWOHYveDhKZ21CTEFrR2J0a00KLS0tIFd3YXdjQUVFZnU4Q3JQd2VjT0lh
-        THg3aFFDTVVFaGNLcHlYNThxN1RxdmcKL6VIMeF8nYQ+0OfoSUsQMM7pweYroCpS
-        QPL0XqCwvOVDWR3hcon0rQBgpjDvXfUlCY7l5EdrQWXoiKP4XT736g==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvSGhIdkhvajU2bHNtM1Rx
+        NXBRS1lVcENtS0Zvc0RZdnQvNW9qUGFFR2djCk1FbUJLcHZYR01lUDFkMU1oR2Fz
+        cjhZM1pSQlhQdmlwS3RsSW1Qdyt1RkEKLS0tIE40S2htaXZ4dzVSU0YzN0RDN2Y5
+        aEtVOTdBeXdFZnRDQVdxbU5kQ0hxRm8KDExWM8uHA243RnDJjYUi08id+GVJIfHs
+        j+W7YU8i65GxXcWt9vhaEjXorkXvqTRzOwhI3JN/xn5y3Bslo3Y6IA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-02T21:59:52Z"
-  mac: ENC[AES256_GCM,data:9Ve+bo1UzzIfJCwVRwDXDKPiq+c7qmeAOXNc5p4p/QZx0MMVYOzb/fvz5DA1XZqAY/3xQtuD7xIl3gcGO6dKanIX2hhHcG5tiBFKKQbTobpcDjmnDeEXsWFjs3/oeI/ChPZr7reo0/1oqoY2OjrvhEH6f1BGjVqNOtKndrzbZmM=,iv:amnhbZMr4hZ90wZo8p9j/b9zp2BOb5PN11luoOA8Oc8=,tag:ZScbunA/SE6GcBO/Bt0FYA==,type:str]
+  lastmodified: "2025-04-03T13:35:09Z"
+  mac: ENC[AES256_GCM,data:O7yDmOtx4vc6TlflhknVQgcDXK0PasFMX38FEay/p6uEw5DPCd/mVwdDPEZvMUcAAHVbEFKFXraQG7GY4lOEDHZ1MWWO4PP1I6ymvIf5AZey8QfJAe/2XQRlGBNVaVcFWRcZUfj35mBzdlndyM94UMmsnKUGncxKzyFGfhL8hj0=,iv:vvnOBmK1H1bjwZsF6pQnOrJI6Cz4pGH6iHJb8e1riew=,tag:vxSlCzgM3PPTj+FrKpcEvg==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
