--- a/kubernetes/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:1AkHPFmnKsRI5KfKJQ==,iv:PpTiUuNhNQxi5jbgkoNsZmitaAfDiuXaUU66Ln6g52I=,tag:2B0496651r8NQ717fY0wTw==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:YJyNKda0mfEnwj0sKg==,iv:iAuK1k0W1BfP11e4FurBkRZMKrjPxUuVvGJ7MfN2P0w=,tag:zCVwq6HRPpzhjrBgMKh2Nw==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,14 @@ sops:
     - recipient: age17nwaq6s9wn36qw4hfrwwmycz55cdxh63u5263jh8xqpg40lxaduquwjcxw
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvSGhIdkhvajU2bHNtM1Rx
-        NXBRS1lVcENtS0Zvc0RZdnQvNW9qUGFFR2djCk1FbUJLcHZYR01lUDFkMU1oR2Fz
-        cjhZM1pSQlhQdmlwS3RsSW1Qdyt1RkEKLS0tIE40S2htaXZ4dzVSU0YzN0RDN2Y5
-        aEtVOTdBeXdFZnRDQVdxbU5kQ0hxRm8KDExWM8uHA243RnDJjYUi08id+GVJIfHs
-        j+W7YU8i65GxXcWt9vhaEjXorkXvqTRzOwhI3JN/xn5y3Bslo3Y6IA==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJWEpNRzBpUU12OHF1blli
+        ZjRQb3Fnblp0MEY2QllkVUoyZ0ZOblVXUXhNCnVKTHVmZ1gyT2dSbmRRZjRtMHYw
+        QTBHSUZsNTV3RHl2dVFxWG9MQUhlL2cKLS0tIHFsK3BJYmNRTmx1anFlYzBBanFs
+        ZklGLzRrNVVJdEpIUFFDUEY0SE5vdGcKdS2cNB9CQRWMeTlAT/l4gQkZTf6bSXD9
+        2Q2Dg1bGUCMcI0uQEAtd7AR0etAhz8wV7f2sf0tDeb3wAOGZRTmrsA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-04-03T13:35:09Z"
-  mac: ENC[AES256_GCM,data:O7yDmOtx4vc6TlflhknVQgcDXK0PasFMX38FEay/p6uEw5DPCd/mVwdDPEZvMUcAAHVbEFKFXraQG7GY4lOEDHZ1MWWO4PP1I6ymvIf5AZey8QfJAe/2XQRlGBNVaVcFWRcZUfj35mBzdlndyM94UMmsnKUGncxKzyFGfhL8hj0=,iv:vvnOBmK1H1bjwZsF6pQnOrJI6Cz4pGH6iHJb8e1riew=,tag:vxSlCzgM3PPTj+FrKpcEvg==,type:str]
+  lastmodified: "2025-04-03T20:04:39Z"
+  mac: ENC[AES256_GCM,data:Xez24RY7qjwf6Jrr5tskeOUSIIOJp5Hhd9rMHKmQy33usVG/L/uXtkMr8uxGDwxBH6mgkNNv5bJYA8r/pDxG0q9CoQ/8NJ4vkNzZAlvonxUxCPNFjM08As+0XaFdErKSTKmKcrQlDHvfh2OAJzVLTmJu1fbS6Im5L5yimunNfac=,iv:8ECiSBb2SErQpBPLMuTjJjnv217/exHbB3NLJ8XXaIA=,tag:riN40a+9/3uFQIrGnvccAw==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
